[tool.poetry]
name = "feedme"
version = "0.0.1"
description = "CLI Food Finding Assistant"
authors = ["Jay Looney <jay.m.looney@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zenware/feedme"
repository = "https://github.com/zenware/feedme"
keywords = ["feedme", "restaurant-finder", "food", "find", "lunch"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
nox = "^2019.11.9"
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
pytest_mock = "^2.0.0"
flake8 = "^3.7.9"
flake8-annotations = "^1.1.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
darglint = "^1.1.3"
safety = "^1.8.5"
mypy = "^0.761"
pytype = "^2020.2.6"
black = "^19.10b0"

[tool.poetry.scripts]
feedme = "feedme.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["feedme"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
